Import of INGY/inc-0.02.tar.gz from CPAN.
gitpan-cpan-distribution: inc
gitpan-cpan-version:      0.02
gitpan-cpan-path:         INGY/inc-0.02.tar.gz
gitpan-cpan-author:       INGY
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,27 @@
---- #YAML:1.0
-name:                inc
-version:             0.01
-abstract:            Add Named Resources to @INC
-license:             perl
-generated_by:        ExtUtils::MakeMaker version 6.32
-distribution_type:   module
-requires:     
-meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.2.html
-    version: 1.2
+---
+abstract: 'Smart @INC Processing'
 author:
-    - Ingy döt Net <ingy@cpan.org>
+  - 'Ingy döt Net <ingy@cpan.org>'
+build_requires: {}
+configure_requires:
+  ExtUtils::MakeMaker: '6.30'
+dynamic_config: 0
+generated_by: 'Dist::Zilla version 5.019, CPAN::Meta::Converter version 2.132830'
+license: perl
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: '1.4'
+name: inc
+no_index:
+  directory:
+    - inc
+    - t
+    - xt
+    - example
+requires:
+  perl: v5.8.1
+resources:
+  bugtracker: https://github.com/ingydotnet/inc-pm/issues
+  homepage: https://github.com/ingydotnet/inc-pm
+  repository: https://github.com/ingydotnet/inc-pm.git
+version: '0.02'
