--- a/META.yml
+++ b/META.yml
@@ -19,9 +19,10 @@ no_index:
     - xt
     - example
 requires:
+  Module::CoreList: '0'
   perl: v5.8.1
 resources:
   bugtracker: https://github.com/ingydotnet/inc-pm/issues
   homepage: https://github.com/ingydotnet/inc-pm
   repository: https://github.com/ingydotnet/inc-pm.git
-version: '0.02'
+version: '0.03'
